@@ -20,7 +20,9 @@ export(complex2mat)
 export(complex2vec)
 export(cvar)
 export(invert)
+export(mat2complex)
 export(pcacf)
+export(vec2complex)
 import(legion)
 import(smooth)
 importFrom(grDevices,devAskNewPage)
