@@ -2,7 +2,8 @@
 #'
 #' \code{complex2mat()} constructs a matrix from the provided complex variable,
 #' while \code{complex2vec()} returns a vector (in mathematical sense), both of them
-#' split the real and imaginary parts. See details for explanation.
+#' split the real and imaginary parts. \code{mat2complex()} and \code{vec2complex()} do
+#' the reverse of the respective functions. See details for explanation.
 #'
 #' Complex variable x + iy can be represented as a vector (x y)' or as a matrix:
 #' (x -y)
@@ -11,6 +12,9 @@
 #' \code{complex2mat()} returns the latter, while \code{complex2vec()} returns the
 #' former. If a user provides a vector of complex variables, the values are stacked above
 #' each other. If a matrix is provided, a higher dimensional matrix is returned.
+#'
+#' \code{mat2complex()} and \code{vec2complex()} return complex variables based on provided
+#' matrix.
 #'
 #' The function is needed to calculate some statistics for complex variables in vector form.
 #'
@@ -53,7 +57,10 @@ complex2mat <- function(x){
         if(!is.null(rownamesX)){
             rownamesX <- paste0(rep(rownames(x),each=2), c("_r","_i"));
         }
-        colnamesX <- paste0(rep(colnames(x),each=2), c("_r","_i"));
+        colnamesX <- colnames(x);
+        if(!is.null(colnamesX)){
+            paste0(rep(colnames(x),each=2), c("_r","_i"));
+        }
     }
     else{
         nrowX <- length(x);
@@ -69,12 +76,10 @@ complex2mat <- function(x){
     # The matrix that will contain the values
     complexMatrix <- matrix(NA, nrowX*2, ncolX*2, dimnames=list(rownamesX, colnamesX));
 
-    for(i in 1:ncolX){
-        complexMatrix[1:nrowX*2-1,i*2-1] <- Re(x[,i]);
-        complexMatrix[1:nrowX*2,i*2] <- Re(x[,i]);
-        complexMatrix[1:nrowX*2-1,i*2] <- -Im(x[,i]);
-        complexMatrix[1:nrowX*2,i*2-1] <- Im(x[,i]);
-    }
+    complexMatrix[1:nrowX*2-1,(1:ncolX)*2-1] <- Re(x[,(1:ncolX)]);
+    complexMatrix[1:nrowX*2,(1:ncolX)*2] <- Re(x[,(1:ncolX)]);
+    complexMatrix[1:nrowX*2-1,(1:ncolX)*2] <- -Im(x[,(1:ncolX)]);
+    complexMatrix[1:nrowX*2,(1:ncolX)*2-1] <- Im(x[,(1:ncolX)]);
 
     return(complexMatrix);
 }
@@ -88,18 +93,15 @@ complex2vec <- function(x){
         nrowX <- nrow(x);
         ncolX <- ncol(x);
         rownamesX <- rownames(x);
-        if(!is.null(rownamesX)){
-            rownamesX <- paste0(rownames(x), c("_r","_i"));
+        colnamesX <- colnames(x);
+        if(!is.null(colnames(x))){
+            colnamesX <- paste0(rep(colnames(x),each=2), c("_r","_i"));
         }
-        colnamesX <- paste0(rep(colnames(x),each=2), c("_r","_i"));
     }
     else{
         nrowX <- length(x);
         ncolX <- 1;
         rownamesX <- names(x);
-        if(!is.null(rownamesX)){
-            rownamesX <- paste0(names(x), c("_r","_i"));
-        }
         colnamesX <- c("x_r", "x_i");
         x <- as.matrix(x);
     }
@@ -107,10 +109,62 @@ complex2vec <- function(x){
     # The matrix that will contain the values
     complexMatrix <- matrix(NA, nrowX, ncolX*2, dimnames=list(rownamesX, colnamesX));
 
-    for(i in 1:ncolX){
-        complexMatrix[,i*2-1] <- Re(x[,i]);
-        complexMatrix[,i*2] <- Im(x[,i]);
+    complexMatrix[,(1:ncolX)*2-1] <- Re(x[,(1:ncolX)]);
+    complexMatrix[,(1:ncolX)*2] <- Im(x[,(1:ncolX)]);
+
+    return(complexMatrix);
+}
+
+#' @rdname complex2mat
+#' @export
+mat2complex <- function(x){
+    # Function creates a matrix/vector of complex variables based on the provided vector/matrix
+
+    if(is.matrix(x)){
+        nrowX <- nrow(x);
+        ncolX <- ncol(x);
+        rownamesX <- rownames(x);
+        if(!is.null(rownamesX)){
+            rownamesX <- rownamesX[1:(nrowX/2)*2-1];
+        }
+        colnamesX <- colnames(x);
+        if(!is.null(colnamesX)){
+            colnamesX <- colnamesX[1:(ncolX/2)*2-1];
+        }
     }
+    else{
+        stop("x is not a matrix! Cannot proceed.");
+    }
+
+    # The matrix that will contain the values
+    complexMatrix <- matrix(NA, nrowX/2, ncolX/2, dimnames=list(rownamesX, colnamesX));
+
+    complexMatrix[,1:(ncolX/2)] <- complex(real=x[1:(nrowX/2)*2,1:(ncolX/2)*2], imaginary=x[1:(nrowX/2)*2-1,1:(ncolX/2)*2]);
+
+    return(complexMatrix);
+}
+
+#' @rdname complex2mat
+#' @export
+vec2complex <- function(x){
+    # Function creates a complex vector/matrix based on the provided matrix
+
+    if(is.matrix(x)){
+        nrowX <- nrow(x);
+        ncolX <- ncol(x);
+        rownamesX <- rownames(x);
+        colnamesX <- colnames(x);
+        if(!is.null(colnamesX)){
+            colnamesX <- colnamesX[1:(ncolX/2)*2-1];
+        }
+    }
+    else{
+        stop("x is not a matrix! Cannot proceed.");
+    }
+
+    # The matrix that will contain the values
+    complexMatrix <- matrix(NA, nrowX, ncolX/2, dimnames=list(rownamesX, colnamesX));
+    complexMatrix[] <- complex(real=x[,(1:(ncolX/2))*2-1], imaginary=x[,(1:(ncolX/2))*2]);
 
     return(complexMatrix);
 }
