@@ -6,6 +6,7 @@ Changes:
 * Implemented complex (pseudo) ACF via cacf() and partial CACF via pcacf().
 * clm() - complex linear model for complex regression models.
 * complex2mat() and complex2vec() functions for switching between complex variables and matrices/vectors.
+* mat2complex() and vec2complex() functions to reverse what the previous two do.
 * vcov(), confint() and summary() for clm class.
 
 
